Тесты + Swagger
